修改配置文件

--- a/src/account.properties
+++ b/src/account.properties
@@ -4,4 +4,6 @@ services=com.aojiaodage.service.impl.DetailService,\
   com.aojiaodage.service.impl.CostService,\
   com.aojiaodage.service.impl.ImportService,\
   com.aojiaodage.service.impl.ExitService
-data-file=.data
+
+# 保存数据的文件【修改为正确的路径】
+data-file=/Users/xxx/mydata/.account_data
