--- a/src/account.properties
+++ b/src/account.properties
@@ -3,7 +3,8 @@ services=com.aojiaodage.service.impl.DetailService,\
   com.aojiaodage.service.impl.IncomeService,\
   com.aojiaodage.service.impl.CostService,\
   com.aojiaodage.service.impl.ImportService,\
+  com.aojiaodage.service.impl.ExportService,\
   com.aojiaodage.service.impl.ExitService
 
 # 保存数据的文件【修改为正确的路径】
-data-file=/Users/xxx/mydata/.account_data
+data-file=/Users/xieshixin/mydata/.account_data
