--- a/src/account.properties
+++ b/src/account.properties
@@ -1,10 +1,6 @@
 # 服务列表
-services=com.aojiaodage.service.impl.DetailService,\
-  com.aojiaodage.service.impl.IncomeService,\
-  com.aojiaodage.service.impl.CostService,\
-  com.aojiaodage.service.impl.ImportService,\
-  com.aojiaodage.service.impl.ExportService,\
-  com.aojiaodage.service.impl.ExitService
 
 # 保存数据的文件【修改为正确的路径】
 data-file=/Users/xieshixin/mydata/.account_data
+
+# 服务名称
